--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>My Project</title>
         </head>
         <body>
-<p>Second Page</p>
+<h1>hello world!</h1>
+<p>My project landing page</p>
         </body>
 </html>
